--- a/inventory/hq2/sdwan.yml
+++ b/inventory/hq2/sdwan.yml
@@ -1,16 +1,16 @@
 all:
   vars:
     virl_lab_file: "{{ playbook_dir }}/files/hq2.yaml"
-    iosxe_sdwan_version: 16.12.2r
-    viptela_version: 19.2.1
-    sdwan_vbond: 192.133.184.91
+    iosxe_sdwan_version: 17.02.01r
+    viptela_version: 20.1.1
+    sdwan_vbond: 192.133.184.26
     sdwan_central_policy_name: 'hq2-centralized-policy'
   children:
     sdwan:
       children:
         sdwan_control:
           vars:            
-            vpn0_portgroup: cpn-rtp-colab4
+            vpn0_portgroup: cpn-rtp-colab1
             vpn0_gateway: 192.133.184.1
             vpn512_portgroup: cpn-rtp-colab4
           children:
@@ -24,7 +24,7 @@ all:
               hosts:
                 vmanage1:
                   sdwan_system_ip: 1.1.1.1
-                  vpn0_ip: 192.133.184.90/22
+                  vpn0_ip: 192.133.184.25/22
                   sdwan_site_id: 1
             vbond_hosts:
               vars:
@@ -35,7 +35,7 @@ all:
               hosts:
                 vbond1:
                   sdwan_system_ip: 1.1.1.2
-                  vpn0_ip: 192.133.184.91/22
+                  vpn0_ip: 192.133.184.26/22
                   sdwan_site_id: 1
             vsmart_hosts:
               vars:
@@ -46,13 +46,16 @@ all:
               hosts:
                 vsmart1:
                   sdwan_system_ip: 1.1.1.3
-                  vpn0_ip: 192.133.184.92/22
+                  vpn0_ip: 192.133.184.27/22
                   sdwan_site_id: 1
                   sdwan_template:
                     name: 'vsmart'
                     variables:
                       'vpn0_internet_ipv4_address': "{{ vpn0_ip }}"
                       'vpn0_default_gateway': "{{ vpn0_gateway }}"
+                      'system_site_id': "{{ sdwan_site_id }}"
+                      'system_host_name': "{{ inventory_hostname }}"
+                      'system_system_ip': "{{ sdwan_system_ip }}"
         sdwan_edge:
           vars:
             sdwan_personality: vedge
@@ -75,7 +78,7 @@ all:
                   'vpn0_interface': GigabitEthernet2
                   'vpn1_ipv4_address': 10.0.1.1/24
                   'vpn1_interface': GigabitEthernet3
-                  'vpn1_ospf_interface': GigabitEthernet3
+#                  'vpn1_ospf_interface': GigabitEthernet3
                   'system_latitude': 37.411343
                   'system_longitude': -121.938803
                   'system_site_id': "{{ sdwan_site_id }}"
