--- a/inventory/hq1/sdwan.yml
+++ b/inventory/hq1/sdwan.yml
@@ -1,8 +1,8 @@
 all:
   vars:
     virl_lab_file: "{{ playbook_dir }}/files/hq1.yaml"
-    iosxe_sdwan_version: 16.12.2r
-    viptela_version: 19.2.1
+    iosxe_sdwan_version: 17.02.01r
+    viptela_version: 20.1.1
     sdwan_vbond: 10.0.0.11
   children:
     sdwan:
@@ -52,6 +52,9 @@ all:
                     variables:
                       'vpn0_internet_ipv4_address': "{{ vpn0_ip }}"
                       'vpn0_default_gateway': "{{ vpn0_gateway }}"
+                      'system_site_id': "{{ sdwan_site_id }}"
+                      'system_host_name': "{{ inventory_hostname }}"
+                      'system_system_ip': "{{ sdwan_system_ip }}"
         sdwan_edge:
           vars:
             sdwan_personality: vedge
